DTGB-485: Fixed whitespace issues on detail pages.

--- a/components/61-layouts/general/detail-layout/_detail-layout.scss
+++ b/components/61-layouts/general/detail-layout/_detail-layout.scss
@@ -50,7 +50,11 @@
   > .search-block,
   > .video,
   > .timeline {
-    margin-top: 4.5rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+
+	> p {
     margin-bottom: 2rem;
   }
 
